samples/invalid/eval/div_by_zero.g
language g0

asm.result = [72] ++ [1 / 0]
